[workspace]
resolver = "2"
members = [
    "crates/*",
    "cumulus/client/block-builder",
    "cumulus/client/cirrus-executor",
    "cumulus/client/consensus/relay-chain",
    "cumulus/client/executor-gossip",
    "cumulus/pallets/executive",
    "cumulus/node",
    "cumulus/runtime",
    "cumulus/primitives",
    "cumulus/test/runtime",
    "cumulus/test/service",
    "substrate/*",
    "test/subspace-test-client",
    "test/subspace-test-runtime",
    "test/subspace-test-service",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-erasure = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
sloth256-189 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
subspace-core-primitives = { opt-level = 3 }
subspace-archiving = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.crates-io]
# TODO: Remove once chacha20poly1305 0.10 appears in libp2p's dependencies
chacha20poly1305 = { git = "https://github.com/RustCrypto/AEADs", rev = "06dbfb5571687fd1bbe9d3c9b2193a1ba17f8e99" }
libp2p = { git = "https://github.com/subspace/rust-libp2p", branch = "subspace-v3" }

[patch."https://github.com/subspace/substrate"]
sc-basic-authorship = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-block-builder = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-chain-spec = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-cli = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-client-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-client-db = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-consensus = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-consensus-slots = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-executor = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-informant = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-keystore = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-network = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-network-common = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-network-gossip = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-offchain = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-peerset = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-rpc = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-rpc-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-service = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-telemetry = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-tracing = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-transaction-pool = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sc-transaction-pool-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }

sp-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-application-crypto = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-arithmetic = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-block-builder = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-blockchain = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-consensus = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-consensus-slots = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-core = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-externalities = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-finality-grandpa = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-inherents = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-io = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-keystore = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-keyring = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-offchain = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-rpc = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-runtime = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-runtime-interface = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-session = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-state-machine = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-std = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-storage = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-timestamp = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-tracing = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-transaction-pool = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-trie = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
sp-version = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }

frame-benchmarking-cli = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
frame-executive = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
frame-support = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
frame-system = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
frame-system-rpc-runtime-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }

substrate-frame-rpc-system = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }

pallet-balances = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-sudo = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-timestamp = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-transaction-payment = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-transaction-payment-rpc = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
pallet-utility = { git = "https://github.com/subspace//substrate", branch = "debug-tx-pool-test" }
